<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="51dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="30dp"
        android:text="Happy"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="31dp"
        android:text="@string/clean2"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="103dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/orange"
        android:text="@string/play"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/orange"
        android:text="@string/feed"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="259dp"
        android:layout_height="326dp"
        android:background="@drawable/image"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        tools:ignore="UselessLeaf"></LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="103dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/orange"
        android:text="@string/clean"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="31dp"
        android:text="@string/hunger"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="46dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>